# pi_tablet_telefon

./: .gitignore  README.md
android-phone-sim/: README.md  settings.gradle
android-phone-sim/app/: build.gradle
backend/: README.md  requirements.txt
backend/app/: ai_engine.py  fast_chat.py  hailo_runtime.py  main.py  mic_capture.py  models.py  personas.py  stt_engine.py  tts_engine.py
backend/tests/: test_fast_chat.py
device/: README.md
device/admin/: app.js  index.html  style.css
device/artifacts/: pi-telefon-debug.apk
device/scripts/: 00-first-boot-check.sh  01-system-update.sh  02-audio-check.sh  03-backend-health.sh  04-waydroid-check.sh  autostart-phone.sh  check-hailo-vision.sh  check-inmp441.sh  check-local-tts.sh  check-local-voice-ai.sh  check-max98357a.sh  create-system-backup.sh  generate-phone-sounds.sh  install-apk-waydroid.sh  install-backend-service.sh  install-backend.sh  install-hailo.sh  install-local-tts.sh  install-local-voice-ai.sh  install-phone-autostart-service.sh  install-rust-stt.sh  install-rust-tablet.sh  (+12 more)
docs/: android-hailo-plan.md  hailo-offload-plan.md  inmp441-i2s-mic.md  max98357a-audio-output.md  phone-app-flow.md  pi-bringup-step-by-step.md  pi-os-waydroid-hailo-plan.md  rust-kiosk-migration.md  system-backup-restore.md
rust-tablet/: Cargo.toml  README.md
rust-tablet/crates/tablet-backend/: Cargo.toml
rust-tablet/crates/tablet-backend/src/: main.rs
rust-tablet/crates/tablet-shell/: Cargo.toml  build.rs
rust-tablet/crates/tablet-shell/src/: main.rs
rust-tablet/crates/tablet-shell/ui/: tablet.slint
(+18 files in other folders)
