[package]
name = "pi-tablet-backend-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
